1.84
-----------------
Verify is setting a variable for missing data.


1.83
-----------------
Switch logs back to u52.
Remove requirement for rhel40 from jobs that run isoc code.
Add 2d orbit plot.
Reserve big scratch for calHist.
Add baseVersion task variable.


1.82
-----------------
Unfix LONE-148@JIRA
Make processes in cleanupCompleteRun depend on getTimes SUCCESS, not DONE.
Use new normalized rate format for merit trending & histos.
Fix a bug in db retry logging.


1.81
-----------------
Fix LONE-148@JIRA
GR v15r47p12gr10 (newer astro, calibSvc retries MySQL connections)


1.80
-----------------
Use ROOT 5.20-gl5, GR v15r47p12gr08, ST v9r15p5
Put log files on u52 (were on u15)


1.79
-----------------
Use rh4 builds.
Avoid rh3 for all jobs, and rh5 for the jobs that won't run there.


1.78
-----------------
Use new style tags for monitoring packages.
FastMon called with the -s option (SAA config).
Running the ScienceTools from afs.
Cleaning up the JO for digi/recon.


1.77
-----------------
Stage crumbs (but not chunks) on xroot.
Make more smaller crumbs.
Fail fast if too many chunks.
Don't make ft2Txt file.


1.76
-----------------
Retry failed DB connections.
genericScript.py catches exceptions in the main function and does cleanup.
Convert findChunks to use genericScript.py, with a cleanup routine that
removes the throttle and run lock if status != 0, so it's safe to autoretry.
Enable autoretry on findChunks.
Invoke locking preexec script with 'python script' instead of 'script' with a
shebang. Hopefully this will stop the "bad interpreter" error messages.

1.75
-----------------
Make ft1 on chunks.
Add diffuse response to ft1.
Make our own gap file.
Add quality and config to ft2.
Creating filtered Merit files (photons only, for now).
Move a bunch of stuff from setSuccessful to setRunning.
Allow specifying the version to fileNames.fileName.
Add version to chunk file names (but it's always 0 at the mo).
Tweak hsplit to work around ROOT 5.20 issue.